examples/test/testpolicy4940.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4940
  namespace: namespace304
spec:
  podSelector:
    matchLabels:
      key13: value22
      key5: value36
      key2: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value23
      podSelector:
        matchLabels:
          key0: value17
          key30: value15
          key15: value36
